SERVER-100559 Only call file_size() on eligible files (#32099)

GitOrigin-RevId: 0d0d4cc0b169ece79d41ceaabeb7ba0be7399056